Modificado Modal de troca de usario

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <p class="lead">Deseja continuar como <strong id="lastPlayerNameText"></strong>?</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" id="changePlayerNameBtn">Mudar Nome</button>
+                    <button type="button" class="btn btn-secondary" id="changePlayerNameBtn">Alterar Usuario</button>
                     <button type="button" class="btn btn-primary" id="continueWithLastPlayerBtn">Sim, continuar!</button>
                 </div>
             </div>
